added bootsrap jquery and sample page

--- a/index.html
+++ b/index.html
@@ -3,11 +3,31 @@
   <head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
+
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+
+    <!-- Scripts -->
+    <script>
+      delete module.exports
+    </script>
+    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.4/Chart.bundle.min.js"></script>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using node <script>document.write(process.versions.node)</script>,
-    Chrome <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+      <div class="container-fluid">
+          <h1>Electron Sample App</h1>
+          <h3>
+              We are using node <script>document.write(process.versions.node)</script>,
+              Chrome <script>document.write(process.versions.chrome)</script>,
+              and Electron <script>document.write(process.versions.electron)</script>.
+          </h3>
+          <h5>Here are some sample pages:</h5>
+      
+          <a class="btn btn-primary" href="CpuUsage/cpuUsage.html">Activity Monitor</a>
+        </div>
+
   </body>
 </html>
