added to do page

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <h5>Here are some sample pages:</h5>
       
           <a class="btn btn-primary" href="CpuUsage/cpuUsage.html">Activity Monitor</a>
+          <a class="btn btn-primary" href="ToDo/toDo.html">To Do</a>
         </div>
 
   </body>
